--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -104,7 +104,7 @@
     </div>
 
 
-  <div class="ui center aligned segment" style="padding: 0px;">
+  <div class="ui center aligned basic segment" style="padding: 0px;">
         <button id = "submit" class = "ui button green" type="submit" >Next Step</button>
     </div>
 
