--- a/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
@@ -36,7 +36,7 @@
     <div class="ui vertical divider">Parents</div>
     <div class="middle aligned row">
 
-      <div class="column">
+      <div class=" column">
         <div class="ui icon header">
           <i class="venus icon"></i>
 
@@ -179,7 +179,7 @@
     </div>
   </div>
 
-<div class="ui center aligned segment" style="padding: 0px;">
+<div class="ui center aligned basic segment" style="padding: 0px;">
 <form action="{% url 'planningandacquiring:K9_parents_confirmed' %}" method="post">
  {% csrf_token %}
     <div class="ui buttons">
