--- a/planningandacquiring/templates/planningandacquiring/confirm_breeding.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_breeding.html
@@ -214,7 +214,7 @@
     		</thead>
         </table>
 
-  <div class="ui center aligned segment" style="padding: 0px;">
+  <div class="ui center aligned basic segment" style="padding: 0px;">
 <form action="{% url 'planningandacquiring:breeding_confirmed' %}" method="post">
  {% csrf_token %}
     <div class="ui buttons">
