--- a/deployment/templates/deployment/request_form.html
+++ b/deployment/templates/deployment/request_form.html
@@ -21,6 +21,17 @@
                 {{form.requester}}
             </div>
             <div class="field">
+                <label>Phone Number</label>
+                {{form.phone_number}}
+            </div>
+            <div class="field">
+                <label>Email Address</label>
+                {{form.email_address}}
+            </div>
+        </div>
+
+        <div class="fields">
+            <div class="field">
                 <label>Place</label>
                 {{form.location}}
             </div>
