--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -1,4 +1,4 @@
-{% extends "profiles/global-base-ui/sidebar_menu.html" %}  
+{% extends "profiles/global-base-ui/sidebar_menu.html" %}
 
 {% block sidebar_module %}
     <div class="pusher" style="background:white;">
@@ -9,7 +9,7 @@
                         <div class="three wide column">
                                 <div class="ui tiny pointing vertical menu" style="width:230px;">
                                     <a class="item"> <b>Unit Management Menu</b></a>
-                                    
+
                                     <a href="{% url 'profiles:add_User_form'%}" class="item">Add User Form
                                         <i class="user plus icon"></i>
                                     </a>
@@ -18,20 +18,20 @@
                                     </a>
                                     <a href="{% url 'unitmanagement:health_form'%}" class="item">Health Form
                                         <i class="first aid icon"></i>
-                                    </a>  
+                                    </a>
                                     <a href="{% url 'unitmanagement:physical_exam_form'%}" class="item">Physical Exam Form
                                         <i class="heartbeat icon"></i>
-                                    </a>  
+                                    </a>
                                     <a href="{% url 'unitmanagement:vaccination_form'%}" class="item">Vaccination Form
                                         <i class="syringe icon"></i>
-                                    </a>  
+                                    </a>
                                     <a href="{% url 'unitmanagement:health_record'%}" class="item">Health Records
                                         <i class="h square icon"></i>
                                     </a>
-                                    <a href="{% url 'unitmanagement:request_form'%}" class="item">Request Equipment
+                                    <a href="{% url 'unitmanagement:request_form'%}" class="item">Damaged Equipment
                                         <i class="exclamation icon"></i>
                                     </a>
-                                    <a href="{% url 'unitmanagement:request_list'%}" class="item">Request Equipment List
+                                    <a href="{% url 'unitmanagement:request_list'%}" class="item">Damaged Equipment List
                                         <i class="clipboard list icon"></i>
                                     </a>
                                 </div>
@@ -57,17 +57,17 @@
                 list-style-type: none;
                 list-style-position: outside;
                 line-height: 1.14285714em;
-              
+
             }
             .submenu:hover{
                 color: black;
             }
             .subdiv{
-                display: flex; 
-                padding: 8px;  
+                display: flex;
+                padding: 8px;
                 flex-wrap: wrap;
                 justify-content: space-between;
             }
-          
+
       </style>
 {% endblock%}
