--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -93,9 +93,14 @@
             <td>{{data_ontraining.age}}</td>
             <td>{{data_ontraining.capability}}</td>
             <td style="width:25%;" class="ui center aligned">
-                <a href="{% url 'training:training_update_form' data_ontraining.id %}" class = "tiny ui blue basic button">Select</a>
-                <a href="{% url 'training:classify_k9_select' data_ontraining.id %}" class = "tiny ui orange basic button">Reassign</a>
-                <a href="{% url 'training:fail_dog' data_ontraining.id %}" class = "tiny ui red basic button">Drop</a>
+              {% if data_ontraining.capability == 2%}
+              <a href="{% url 'training:training_update_form' data_ontraining.id %}" class = "tiny ui blue basic button">Select</a>
+              <a href="{% url 'training:classify_k9_select' data_ontraining.id %}" class = "tiny ui orange basic button reassign">Reassign</a>
+              <a href="{% url 'training:fail_dog' data_ontraining.id %}" class = "tiny ui red basic button">Drop</a>
+              {% else %}
+              <a href="{% url 'training:training_update_form' data_ontraining.id %}" class = "tiny ui blue basic button">Select</a>
+              <a href="{% url 'training:fail_dog' data_ontraining.id %}" class = "tiny ui red basic button">Drop</a>
+              {% endif %}
             </td>
         </tr>
         {% endfor %}
