--- a/unitmanagement/templates/unitmanagement/health_history.html
+++ b/unitmanagement/templates/unitmanagement/health_history.html
@@ -1,4 +1,4 @@
-{% extends "profiles/sidebar_um.html" %}  
+{% extends "profiles/sidebar_um.html" %}
 
 {% block content %}
 <div class="ui inverted segment" style="padding:20px;">
@@ -13,6 +13,7 @@
     <a class="item active" data-tab="first">Health</a>
     <a class="item" data-tab="second">Physical Exam</a>
     <a class="item" data-tab="third">Vaccinations</a>
+    <a class="item" data-tab="fourth">Heat Cycle</a>
 </div>
 <div class="ui tab segment active" data-tab="first">
     <table id="tabledata1" class="ui three column celled table">
@@ -88,14 +89,17 @@
         </tbody>
     </table>
 </div>
+<div class="ui tab segment" data-tab="fourth">
+  heat cycle
+</div>
 <script type="text/javascript">
-        
+
     $(document).ready(function() {
         $('#tabledata1').DataTable();
         $('#tabledata2').DataTable();
         $('#tabledata3').DataTable();
         $('.menu .item').tab();
     } );
-    
+
 </script>
  {% endblock %}
