--- a/planningandacquiring/templates/planningandacquiring/K9_detail.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_detail.html
@@ -3,6 +3,11 @@
     {{k9}}
     <div class="sub header">K9 details for {{k9}}</div>
 </h2>
+{% if messages %}
+    {% for message in messages %}
+        <div class="ui green message" > {{ message }}</div>
+    {% endfor %}
+{% endif %}
 		<table class="ui celled table">
         	<thead>
           	<tr>
@@ -44,7 +49,7 @@
                 </tr>
             <tr>
               <th>Training Status</th>
-                <td>{{k9.training_status}}</td>
+                <td id='status'>{{k9.training_status}}</td>
                 </tr>
             <tr>
               <th>Capability</th>
@@ -84,7 +89,39 @@
 
     		</thead>
         </table>
+        {% if k9.training_status ==  'For-Breeding' or k9.training_status ==  'For-Deployment'%}
+        <div class="ui segment">
+          <form class="ui form" method="POST">
+            {% csrf_token %}
+            <div class="inline fields">
+              <div class="field">
+                  <input type="radio" name="radio" value="For-Breeding">For-Breeding
+              </div>
+              <div class="field">
+                  <input type="radio" name="radio" value="For-Deployment">For-Deployment
+              </div>
+              <div class="field">
+                <button type="submit" class="ui green button" onclick="return confirm('Are you sure?')">Submit</button>
+              </div>
+            </div>
+          </form>
+        </div>
+        {% endif %}
+
         <div class="ui basic segment">
             <a href="{% url 'planningandacquiring:K9_list'%}" class="ui blue button">Back</a>
         </div>
+
+<script type="text/javascript">
+
+    $(document).ready(function() {
+
+      if ($("#status").html() == 'For-Deployment'){
+        $('input:radio[name="radio"][value="For-Deployment"]').attr('checked',true);
+      }else{
+        $('input:radio[name="radio"][value="For-Breeding"]').attr('checked',true);
+      }
+    });
+
+</script>
 {% endblock %}
