--- a/unitmanagement/templates/unitmanagement/health_history.html
+++ b/unitmanagement/templates/unitmanagement/health_history.html
@@ -114,7 +114,9 @@
 
     $(document).ready(function() {
         $('#tabledata1').DataTable();
-        $('#tabledata2').DataTable();
+        $('#tabledata2').DataTable({
+        "order": [[ 0, "desc" ]]
+        });
         $('#tabledata3').DataTable();
         $('.menu .item').tab();
     } );
