--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -3,14 +3,28 @@
 {% block sidebar%}
     <div class="ui inverted bottom attached segment pushable">
         <div class="ui inverted labeled icon left inline vertical sidebar menu" id = "sidebar" >
-            <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
+            {% if request.session.session_user_position == "Handler" %}
             <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Dashboard</a>
+            <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
+            <a class="item" href="{% url 'unitmanagement:request_form'%}"><i class="folder open icon"></i>Unit Management</a>
+            {% endif %}
+
+            {% if request.session.session_user_position == "Administrator" %}
+            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Dashboard</a>
+            <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
+            <a class="item" href="{% url 'planningandacquiring:K9_list'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
+            {% endif %}
+
+            {% if request.session.session_user_position == "Veterinarian" %}
+            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Dashboard</a>
+            <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'planningandacquiring:K9_list'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
             <a class="item" href="{% url 'training:training_records'%}"><i class="paw icon"></i>Training</a>
             <a class="item" href="{% url 'deployment:index'%}"><i class="road icon"></i>Deployment</a>
             <a class="item" href="{% url 'inventory:medicine_add'%}"><i class="warehouse icon"></i>Inventory</a>
             <a class="item" href="{% url 'profiles:add_User_form'%}"><i class="folder open icon"></i>Unit Management</a>
             <a class="item" href="{% url 'training:adoption_list'%}"><i class="handshake icon"></i>Adoption</a>
+            {% endif %}
             <a class="item" href="{% url 'profiles:login'%}">Logout</a>
         </div>
         
