--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -11,6 +11,35 @@
     <a class="item" data-tab="fourth">Trained</a>
 </div>
 <div class="ui tab segment active" data-tab="first">
+<center>
+    <div class="ui three statistics">
+  <div class="statistic">
+    <div class="value">
+      {{NDD_count}} / {{NDD_demand}}
+    </div>
+    <div class="label">
+      NDD
+    </div>
+  </div>
+  <div class="statistic">
+    <div class="value">
+      {{EDD_count}} / {{EDD_demand}}
+    </div>
+    <div class="label">
+      EDD
+    </div>
+  </div>
+  <div class="statistic">
+    <div class="value">
+      {{SAR_count}} / {{SAR_demand}}
+    </div>
+    <div class="label">
+      SAR
+    </div>
+  </div>
+</div>
+</center>
+
     <table id="tabledata1" class="ui seven column celled table">
         <thead>
             <tr>
