--- a/unitmanagement/templates/unitmanagement/health_record.html
+++ b/unitmanagement/templates/unitmanagement/health_record.html
@@ -21,6 +21,23 @@
         </tr>
     </thead>
     <tbody>
+        {% if request.session.session_user_position == "Handler" %}
+        <tr>
+            <td>
+                <a href="{% url 'unitmanagement:health_history' data.id %}">{{ data.name }}</a>
+            </td>
+            <td>
+            {{ data.serial_number }}
+            </td>
+
+            <td>{{ data.breed }}</td>
+            <td>{{ data.sex }}</td>
+            <td>{{ data.age }}</td>
+            <td>{{ data.microchip }}</td>
+        </tr>
+        {% endif %}
+
+        {% if request.session.session_user_position == "Veterinarian" %}
         {% for data in data %}
         <tr>
             <td>
@@ -36,6 +53,7 @@
             <td>{{ data.microchip }}</td>
         </tr>
         {% endfor %}
+        {% endif %}
     </tbody>
 </table>
 
