--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -8,6 +8,7 @@
                         <div class="three wide column">
                             <div class="ui tiny pointing vertical menu" style="width:230px;">
                                 <a class="item"> <b>Planning and Acquiring Menu</b></a>
+                                {% if request.session.session_user_position == "Veterinarian" %}
                                 <a href="{% url 'planningandacquiring:add_donated_K9_form'%}" class="item">Add K9 Data Form
                                         <i class="plus circle icon"></i>
                                 </a>  
@@ -26,6 +27,16 @@
                                  <a class="item">Breeding Recommendation
                                         <i class="money bill alternate outline icon"></i>
                                 </a>
+                                {% endif %}
+
+                                {% if request.session.session_user_position == "Administrator" %}
+                                 <a href="{% url 'planningandacquiring:K9_forecast'%}" class="item">K9 Forecasting
+                                       <i class="chart line icon"></i>
+                                </a>
+                                <a class="item">Budgeting
+                                        <i class="money bill alternate outline icon"></i>
+                                </a>
+                                {% endif %}
 
                             </div>
                         </div>
